/* $Id: changelog,v 1.1753 2001-10-15 17:21:27 sandervl Exp $ */

 2001-10-15: Sander van Leeuwen <sandervl@xs4all.nl>
    - KERNEL32, USER32, WNASPI32, DDRAW:
                o Custom build updates

 2001-10-14: Sander van Leeuwen <sandervl@xs4all.nl>
    - USER32:   o Convert color cursor to monochrome if it only uses two colors.
                  This overcomes a silly limitation in some less advanced 
                  display drivers. (SDD still has no support for color cursors!)
                  (fixes mouse cursor flickering & screen distortion when
                   accessing the frame buffer directly)
                  NOTE: This is a partial solution only. Real color cursors
                        still use GRADD's rather poor software emulation.

 2001-10-13: Sander van Leeuwen <sandervl@xs4all.nl>
    - WSOCK32:  o Overwrite IP header length in sendto for raw sockets
                  with IP_HDRINCL option set.
                  (fixes errors for apps that use big endian format for 
                   the length word)
                o WSAEnumNetworkEvents now reports (some) events properly
                o Call WSACleanup during dll unload in case application
                  forgot to do that.

 2000-10-12: Yuri Dario <mc6530@mclink.it>
    - USER32:   o GetNextDlgGroupItem fix for infinite loop in Opera

 2001-10-12: Achim Hasenmueller <achimha@innotek.de>
    - KERNEL32: o use bounce buffers if end of buffer crosses
                  tiled region barrier, not start of buffer
                  (yeah, being nit-picking here, OS/2 will actually
                  never give you a memory object that crosses the boundary...)

 2001-10-11: Patrick Haller <patrick.haller@innotek.de>
    - include:  o debugtools.h: memory corruption in debugstr_()
    - KERNEL32: o (cheap) heap lookup acceleration
                o better profiler calibration :)
                o bounce buffers for DeviceIoControl() with
                  high memory buffers